# koois_auth

./: .env.test  Cargo.toml  README.md
.github/workflows/: deploy.yml
migrations/: migrations.sql  seeds.sql
src/: cfg.rs  constants.rs  db.rs  error.rs  google.rs  lib.rs  mail.rs  main.rs  mdw.rs  server.rs  utils.rs
src/auth/: model.rs  repo.rs  service.rs
src/permission/: model.rs  repo.rs  service.rs
src/role/: model.rs  repo.rs  service.rs
src/rolepermissions/: model.rs  repo.rs  service.rs
src/user/: model.rs  repo.rs  service.rs
