[package]
name = "koois_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = "9.3.1"
serde = "1.0.218"
serde_json = "1.0.140"
rsa = "0.9.7"
dotenvy = "0.15.7"
config = "0.15.11"
once_cell = "1.20.3"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
thiserror = "2.0.12"
anyhow = { version = "1.0", default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
async-trait = "0.1.88"
request-http-parser = "0.1.1"

[dev-dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
rand = "0.8.5"
tokio-test = "0.4.4"

[features]
default = []
test-sqlite = []   # new feature only for test
